# NetworksLab2018AU

./: .directory  .gitignore  .travis.yml  README.md  appveyor.yml  build.gradle
AUPay/: README.md  build.gradle  settings.gradle
auction/: .gitignore  README.md  build.gradle  client  server  settings.gradle
calculator/: .gitignore  build.gradle
client/: build.gradle
client/client_linux/: CMakeLists.txt  handlers.c  main.c  utils.c
client/client_windows/: CMakeLists.txt  handlers.c  main.c  utils.c
common/linux_common/: client.h  common_cleaner.h  message.h  vector.h
common/windows_common/: client.h  message.h  vector.h
dns/: .gitignore  CMakeLists.txt  FORMAT.md  Message.cpp  Message.h  README.md  build.sh  client.cpp  client_main.c  common.cpp  common.h  dns.c  dns.h  dns_header.c  dns_header.h  dns_packet.cpp  dns_packet.h  header.cpp  header.h  name.cpp  name.h  query.cpp  query.h  resource_record.cpp  resource_record.h  server.cpp  server_main.c  test.sh
dns/client/: CMakeLists.txt  Client.cpp  Client.h  Resolver.cpp  Resolver.h  client.c  client.cpp  dns_client.c  dns_client.cpp  dns_client.h  initialization.c  initialization.h  main.c  main.cpp  message.h  request.c  request.h  response.c  response.h  utils.c  utils.h
dns/client/include/: dns_client.h
dns/cmake/: client.cmake  utils.cmake
dns/common/: CMakeLists.txt  byte_buf.c  common.h  connection.c  connection.h  dnsUtils.cpp  dnsUtils.h  dns_proto.c  dns_socket_utils.c  handling.c  handling.h  message.h
dns/common/include/: byte_buf.h  dns_proto.h  dns_socket_utils.h  io_utils.h  log.h
dns/commons/: dns.c  dns.h
dns/inc/: dns.h
dns/include/: dns.h  network.h
dns/include/utils/: errors.h  io.h
dns/server/: .gitignore  CMakeLists.txt  Resolver.cpp  Resolver.h  Server.cpp  Server.h  dns_server.c  hosts  hosts.txt  main.c  main.cpp  message.h  server.c  server.cpp  server.h  utils.c
dns/server/include/: dns_server.h
dns/src/: DnsAll.h  DnsError.h  DnsFwd.h  DnsServerSocket.cpp  DnsServerSocket.h  DnsSocket.cpp  DnsSocket.h  MessageType.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  UdpSocket.cpp  UdpSocket.h
dns/src/client/: CMakeLists.txt  client.c  main.cpp
dns/src/server/: CMakeLists.txt  main.cpp  server.c
dns/src/utils/: errors.cpp  io.cpp
messenger/: .gitignore  .travis.yml  CMakeLists.txt  FORMAT.md  Messages.h  MessagesQueue.cpp  MessagesQueue.h  README.md  commons.cpp  linux_commons.cpp  win_commons.cpp
messenger/client/: CMakeLists.txt  Client.cpp  Client.h  ClientSocket.cpp  main.c
messenger/client_linux/: CMakeLists.txt
messenger/cmake/: client.cmake  server.cmake  utils.cmake
messenger/common/: CMakeLists.txt  client_utils.h  client_utils_win.h  communication.c  communication.h  message_format.c  network.c  network.h  socket_utils.c  string_utils.c  threads.c  threads.h
messenger/common/include/: elegram_port.h  list.h  log.h  message_format.h  socket_utils.h  ssize_t.h  string_utils.h  thread_utils.h
messenger/commons/: linux.c  linux.h  win.c  win.h
messenger/docs/: protocol.md
messenger/inc/: socket.hpp
messenger/include/: errors.h  network.h  packets.h
messenger/include/utils/: errors.h  packets.h
messenger/linux_client/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h  Message.cpp  Message.h  MessagesViewer.cpp  MessagesViewer.h  Socket.cpp  Socket.h  client.cpp  client.h  linux_client.c  main.c  main.cpp  source_client.cpp
messenger/linux_server/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  MessageSender.cpp  MessageSender.h  Server.cpp  Server.h  ServerSocket.cpp  clients.c  clients.h  linux_server.c  main.c  main.cpp  message.cpp  message.h  packet.h  packet_manager.cpp  server.cpp  server.h  source_server.cpp  vector.h
messenger/server/: CMakeLists.txt  ServerSocket.cpp  ServerSocket.h  clients.c  clients.h  main.c  main.cpp  server.c  struct_client.c  struct_client.h
messenger/server/include/: server.h
messenger/server_linux/: CMakeLists.txt  main.c
messenger/socket/: CMakeLists.txt  Message.cpp  Message.h  Socket.cpp  Socket.h
messenger/src/: Date.cpp  Date.h  ElegramAll.h  ElegramFwd.h  Message.cpp  Message.h  MessageType.h  MessengerError.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  date.cpp  date.h  elegram_all.h  elegram_fwd.h  message.cpp  message.h  message_type.h  messenger_error.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
messenger/src/client/: CMakeLists.txt  client.cpp  main.cpp
messenger/src/server/: CMakeLists.txt  main.cpp  sever.cpp
messenger/src/utils/: errors.cpp  packets.cpp
messenger/windows_client/: CMakeLists.txt  Client.h  MessagesViewer.h  client.cpp  client.h  client_windows.sln  client_windows.vcxproj  main.c  main.cpp  main_client.cpp  source_client.cpp  windows_client.c
messenger/windows_server/: CMakeLists.txt  ClientHandler.h  MessageSender.h  Messages.h  Server.h  main.c  main.cpp  main_server.cpp  message.cpp  message.h  packet.cpp  packet.h  packet_manager.h  server.cpp  server.h  server_windows.sln  server_windows.vcxproj  source_server.cpp  vector.h  windows_server.c
online_shop/: pom.xml
online_shop/client/: pom.xml
online_shop/protocol/: pom.xml
online_shop/server/: pom.xml
online_shop/utils/: pom.xml
primes/: .gitignore  CMakeLists.txt
primes/docs/: protocol.md
primes/include/: list.h  parser.hpp  protocol.hpp  socket.hpp
primes/src/client/: CMakeLists.txt  client.cpp
primes/src/server/: CMakeLists.txt  Server.cpp
project/: README.md
protocol/: README.md  build.gradle
roulette/: .gitignore  build.gradle  settings.gradle
roulette/protocol/: build.gradle
server/: build.gradle
server/server_linux/: CMakeLists.txt  cleaner.c  handlers.c  lists.h  main.c  utils.c
server/server_windows/: CMakeLists.txt  cleaner.c  handlers.c  lists.h  main.c  utils.c
tcp_template/client_linux/: CMakeLists.txt  main.c
tcp_template/client_windows/: CMakeLists.txt  main.c  main.cpp
tcp_template/server_linux/: main.c
tic-tac-toe/: README.md
torrent/: README.md  build.gradle
(+278 files in other folders)
