cmake_minimum_required(VERSION 2.8)
project(client_linux)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
set(SOURCE_FILES main.cpp ${COMMON_SOURCE_FILES})
#set_property(TARGET client_linux PROPERTY C_STANDARD 99)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})

#set_property(TARGET server_linux PROPERTY C_STANDARD 99)
find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
    target_compile_options(${PROJECT_NAME} PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
    target_link_libraries(${PROJECT_NAME} "${CMAKE_THREAD_LIBS_INIT}")
endif()
